--- a/ParturitionModel.App/ParturitionModel.App.csproj
+++ b/ParturitionModel.App/ParturitionModel.App.csproj
@@ -95,6 +95,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ParturitionModel.Core\ParturitionModel.Core.csproj">
+      <Project>{0A367EBB-0BAD-4587-9F6A-6F0FE277CBB0}</Project>
+      <Name>ParturitionModel.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
