--- a/ParturitionModel.Core/ParturitionModel.Core.csproj
+++ b/ParturitionModel.Core/ParturitionModel.Core.csproj
@@ -41,6 +41,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChildDeathInfo.cs" />
     <Compile Include="Environment.cs" />
     <Compile Include="SimulationEventArgs.cs" />
     <Compile Include="Simulator.cs" />
